--- a/LabMecc/PPI1-Molla/PPI1-Molla.ipynb
+++ b/LabMecc/PPI1-Molla/PPI1-Molla.ipynb
@@ -22,7 +22,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## 1 - $m$"
+                "## 1 - Misure massa $m$"
             ],
             "metadata": {}
         },
@@ -212,7 +212,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## 2 - $X_{eq}$"
+                "## 2 - Misure posizione di equlibrio $x_{eq}$"
             ],
             "metadata": {}
         },
@@ -402,7 +402,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## 3 - $T_{5osc}$"
+                "## 3 - Misure periodo $T_{5osc}$"
             ],
             "metadata": {}
         },
