--- a/LabMecc/PPI1-Molla/PPI1-Molla.ipynb
+++ b/LabMecc/PPI1-Molla/PPI1-Molla.ipynb
@@ -14,7 +14,16 @@
                 "import numpy as np\n",
                 "import pandas as pd\n",
                 "\n",
-                "from lab import *"
+                "import lab"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 2,
+            "source": [
+                "N = 10"
             ],
             "outputs": [],
             "metadata": {}
@@ -28,7 +37,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 3,
             "source": [
                 "m = pd.read_csv(\"Data/Massa.csv\")\n",
                 "m"
@@ -152,32 +161,6 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 2
-                }
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 3,
-            "source": [
-                "# Media\n",
-                "mu_m = m.mean()\n",
-                "mu_m"
-            ],
-            "outputs": [
-                {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "m4     317.71\n",
-                            "m6     475.43\n",
-                            "m8     630.34\n",
-                            "m10    788.19\n",
-                            "dtype: float64"
-                        ]
-                    },
-                    "metadata": {},
                     "execution_count": 3
                 }
             ],
@@ -187,9 +170,8 @@
             "cell_type": "code",
             "execution_count": 4,
             "source": [
-                "# Deviazione standard campionaria\n",
-                "sigma_m = m.std(ddof=1)\n",
-                "sigma_m"
+                "# Deviazione standard massa\n",
+                "m.std(ddof=1)"
             ],
             "outputs": [
                 {
@@ -210,6 +192,56 @@
             "metadata": {}
         },
         {
+            "cell_type": "code",
+            "execution_count": 5,
+            "source": [
+                "# Media massa\n",
+                "m.mean()"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "m4     317.71\n",
+                            "m6     475.43\n",
+                            "m8     630.34\n",
+                            "m10    788.19\n",
+                            "dtype: float64"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 5
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 6,
+            "source": [
+                "# Deviazione standard media massa\n",
+                "m.std(ddof=1) / np.sqrt(N)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "m4     0.023333\n",
+                            "m6     0.036667\n",
+                            "m8     0.030551\n",
+                            "m10    0.040689\n",
+                            "dtype: float64"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 6
+                }
+            ],
+            "metadata": {}
+        },
+        {
             "cell_type": "markdown",
             "source": [
                 "## 2 - Misure posizione di equlibrio $x_{eq}$"
@@ -218,10 +250,10 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 7,
             "source": [
-                "Xeq = pd.read_csv(\"Data/Xeq.csv\")\n",
-                "Xeq"
+                "xeq = pd.read_csv(\"Data/Xeq.csv\")\n",
+                "xeq"
             ],
             "outputs": [
                 {
@@ -342,44 +374,17 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 5
+                    "execution_count": 7
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 8,
             "source": [
-                "# Media\n",
-                "mu_Xeq = Xeq.mean()\n",
-                "mu_Xeq"
-            ],
-            "outputs": [
-                {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "Xeq4     12.92\n",
-                            "Xeq6     16.27\n",
-                            "Xeq8     19.59\n",
-                            "Xeq10    23.02\n",
-                            "dtype: float64"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 6
-                }
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 7,
-            "source": [
-                "# Deviazione standard campionaria\n",
-                "sigma_Xeq = Xeq.std(ddof=1)\n",
-                "sigma_Xeq"
+                "# Deviazione standard xeq\n",
+                "xeq.std(ddof=1)"
             ],
             "outputs": [
                 {
@@ -394,7 +399,57 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 7
+                    "execution_count": 8
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 9,
+            "source": [
+                "# Media xeq\n",
+                "xeq.mean()"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "Xeq4     12.92\n",
+                            "Xeq6     16.27\n",
+                            "Xeq8     19.59\n",
+                            "Xeq10    23.02\n",
+                            "dtype: float64"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 9
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 10,
+            "source": [
+                "# Deviazione standard media xeq\n",
+                "xeq.std(ddof=1) / np.sqrt(N)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "Xeq4     0.013333\n",
+                            "Xeq6     0.015275\n",
+                            "Xeq8     0.010000\n",
+                            "Xeq10    0.013333\n",
+                            "dtype: float64"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 10
                 }
             ],
             "metadata": {}
@@ -402,13 +457,13 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## 3 - Misure periodo $T_{5osc}$"
+                "## 3.1 - Misure periodo 5 oscillazioni $T_{5osc}$"
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 11,
             "source": [
                 "T5 = pd.read_csv(\"Data/Periodo.csv\")\n",
                 "T5"
@@ -532,44 +587,17 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 8
+                    "execution_count": 11
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 12,
             "source": [
-                "# Media\n",
-                "mu_T5 = T5.mean()\n",
-                "mu_T5"
-            ],
-            "outputs": [
-                {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "T4     2.816\n",
-                            "T6     3.414\n",
-                            "T8     3.875\n",
-                            "T10    4.336\n",
-                            "dtype: float64"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 9
-                }
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 10,
-            "source": [
-                "# Deviazione standard campionaria\n",
-                "sigma_T5 = T5.std(ddof=1)\n",
-                "sigma_T5"
+                "# Deviazione standard periodo 5 oscillazioni\n",
+                "T5.std(ddof=1)"
             ],
             "outputs": [
                 {
@@ -584,7 +612,139 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 10
+                    "execution_count": 12
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## 3.2 - Misure periodo singola oscillazione $T$"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 13,
+            "source": [
+                "T = T5 / 5"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 14,
+            "source": [
+                "# Media singola oscillazione\n",
+                "T.mean()"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "T4     0.5632\n",
+                            "T6     0.6828\n",
+                            "T8     0.7750\n",
+                            "T10    0.8672\n",
+                            "dtype: float64"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 14
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 15,
+            "source": [
+                "# Deviazione standard media singola oscillazione\n",
+                "T.std(ddof=1) / np.sqrt(N)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "T4     0.003555\n",
+                            "T6     0.004002\n",
+                            "T8     0.002753\n",
+                            "T10    0.003116\n",
+                            "dtype: float64"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 15
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## 3.3 - Misure periodo singola oscillazione al quadrato $T^2$"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 16,
+            "source": [
+                "T2 = T * T"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 17,
+            "source": [
+                "# Media singola oscillazione ^ 2\n",
+                "T2.mean()"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "T4     0.317308\n",
+                            "T6     0.466360\n",
+                            "T8     0.600693\n",
+                            "T10    0.752123\n",
+                            "dtype: float64"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 17
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 18,
+            "source": [
+                "# Deviazione standard media singola oscillazione ^ 2\n",
+                "T2.std(ddof=1) / np.sqrt(N)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "T4     0.004030\n",
+                            "T6     0.005477\n",
+                            "T8     0.004268\n",
+                            "T10    0.005393\n",
+                            "dtype: float64"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 18
                 }
             ],
             "metadata": {}
