--- a/LabMecc/PPI1-Molla/PPI1-Molla.tex
+++ b/LabMecc/PPI1-Molla/PPI1-Molla.tex
@@ -427,11 +427,11 @@ Le misure sono state effettuate in quattro configurazioni diverse: 4 dischi, 6 d
 \begin{figure}[ht]
   \centering
   \begin{minipage}{0.5 \textwidth}
-    \includegraphics[width=\textwidth]{example-image-a}
+    \includegraphics[width=\textwidth]{Images/Histo_T4.pdf}
     \caption{Periodo singola oscillazione 4 dischi.}
   \end{minipage}%
   \begin{minipage}{0.5 \textwidth}
-    \includegraphics[width=\textwidth]{example-image-b}
+    \includegraphics[width=\textwidth]{Images/Histo_T6.pdf}
     \caption{Periodo singola oscillazione 6 dischi.}
   \end{minipage}
 \end{figure}
@@ -439,11 +439,11 @@ Le misure sono state effettuate in quattro configurazioni diverse: 4 dischi, 6 d
 \begin{figure}[ht]
   \centering
   \begin{minipage}{0.5 \textwidth}
-    \includegraphics[width=\textwidth]{example-image-a}
+    \includegraphics[width=\textwidth]{Images/Histo_T8.pdf}
     \caption{Periodo singola oscillazione 8 dischi.}
   \end{minipage}%
   \begin{minipage}{0.5 \textwidth}
-    \includegraphics[width=\textwidth]{example-image-b}
+    \includegraphics[width=\textwidth]{Images/Histo_T10.pdf}
     \caption{Periodo singola oscillazione 10 dischi.}
   \end{minipage}
 \end{figure}
