--- a/LabMecc/PPI1-Molla/PPI1-Molla.ipynb
+++ b/LabMecc/PPI1-Molla/PPI1-Molla.ipynb
@@ -13,6 +13,7 @@
             "source": [
                 "import matplotlib.pyplot as plt\n",
                 "import numpy as np\n",
+                "from numpy import pi, sqrt\n",
                 "import pandas as pd\n",
                 "\n",
                 "from lab import plot_histogram, plot_linear_fit, plot_residuals"
@@ -24,6 +25,7 @@
             "cell_type": "code",
             "execution_count": 2,
             "source": [
+                "# Numero misurazioni\n",
                 "N = 10"
             ],
             "outputs": [],
@@ -197,7 +199,8 @@
             "execution_count": 5,
             "source": [
                 "# Media massa\n",
-                "m.mean()"
+                "mu_m = m.mean()\n",
+                "mu_m"
             ],
             "outputs": [
                 {
@@ -222,7 +225,8 @@
             "execution_count": 6,
             "source": [
                 "# Deviazione standard media massa\n",
-                "m.std(ddof=1) / np.sqrt(N)"
+                "sigma_m = m.std(ddof=1) / np.sqrt(N)\n",
+                "sigma_m"
             ],
             "outputs": [
                 {
@@ -705,7 +709,8 @@
             "execution_count": 17,
             "source": [
                 "# Media singola oscillazione ^ 2\n",
-                "T2.mean()"
+                "mu_T2 = T2.mean()\n",
+                "mu_T2"
             ],
             "outputs": [
                 {
@@ -730,7 +735,8 @@
             "execution_count": 18,
             "source": [
                 "# Deviazione standard media singola oscillazione ^ 2\n",
-                "T2.std(ddof=1) / np.sqrt(N)"
+                "sigma_T2 = T2.std(ddof=1) / np.sqrt(N)\n",
+                "sigma_T2"
             ],
             "outputs": [
                 {
@@ -905,6 +911,78 @@
                     "metadata": {
                         "needs_background": "light"
                     }
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## 5 - Misura della costante elastica della molla $k$"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "$ 1 \\; k = 1 \\frac{\\text{N}}{\\text{m}} = 1 \\frac{\\text{kg} \\cdot \\text{m}}{\\text{s}^2} \\frac{1}{\\text{m}} $"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 23,
+            "source": [
+                "# Costante elastica\n",
+                "\n",
+                "delta_m = (mu_m[\"m10\"] - mu_m[\"m4\"]) * 0.001  # g -> kg\n",
+                "delta_T = mu_T2[\"T10\"] - mu_T2[\"T4\"]  # s\n",
+                "\n",
+                "k = 4 * (pi ** 2) * (delta_m / delta_T)\n",
+                "\n",
+                "print(f\"k = {k}\")"
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "k = 42.71655157063986\n"
+                    ]
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 24,
+            "source": [
+                "# Incertezza costante elastica\n",
+                "\n",
+                "sigma_delta_m = sqrt(\n",
+                "    sigma_m[\"m10\"] ** 2 +\n",
+                "    sigma_m[\"m4\"] ** 2\n",
+                ") * 0.001  # g -> kg\n",
+                "\n",
+                "sigma_delta_T = sqrt(\n",
+                "    sigma_T2[\"T10\"] ** 2 +\n",
+                "    sigma_T2[\"T4\"] ** 2\n",
+                ")  # s\n",
+                "\n",
+                "sigma_k = 4 * (pi ** 2) * sqrt(\n",
+                "    (1 / delta_T * sigma_delta_m) ** 2 +\n",
+                "    (delta_m / delta_T ** 2 * sigma_delta_T) ** 2\n",
+                ")\n",
+                "\n",
+                "print(f\"sigma_k = {sigma_k}\")"
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "sigma_k = 0.6614553544945551\n"
+                    ]
                 }
             ],
             "metadata": {}
