--- a/LabMecc/PPI1-Molla/PPI1-Molla.tex
+++ b/LabMecc/PPI1-Molla/PPI1-Molla.tex
@@ -261,8 +261,8 @@ La \textit{deviazione standard della media} di $N$ misure indipendenti di una st
   \item Propagazione incertezze $k = 4 \pi^2 \frac{\Delta m}{\Delta T}$
     \begin{align}
       \sigma_k &= \sqrt{\left( \diffp{k}{\Delta m} \sigma_{\Delta m} \right)^2 + \left( \diffp{k}{\Delta T} \sigma_{\Delta T} \right)^2} \nonumber \\
-      % &= 4 \pi^2 \sqrt{\left( \frac{1}{\Delta T} \sigma_{\Delta m} \right)^2 + \left( -\frac{\Delta m}{(\Delta T)^2} \sigma_{\Delta T} \right)^2} \nonumber \\
-      &= 4 \pi^2 \sqrt{\frac{\sigma_{m_2}^2 + \sigma_{m_1}^2}{(\Delta T)^2} + \frac{(\Delta m)^2}{(\Delta T)^4} (\sigma_{T^2_2}^2 + \sigma_{T^2_1}^2)}
+      &= 4 \pi^2 \sqrt{\left( \frac{1}{\Delta T} \sigma_{\Delta m} \right)^2 + \left( -\frac{\Delta m}{(\Delta T)^2} \sigma_{\Delta T} \right)^2} \nonumber \\
+      % &= 4 \pi^2 \sqrt{\frac{\sigma_{m_2}^2 + \sigma_{m_1}^2}{(\Delta T)^2} + \frac{(\Delta m)^2}{(\Delta T)^4} (\sigma_{T^2_2}^2 + \sigma_{T^2_1}^2)}
     \end{align}
 \end{itemize}
 
@@ -457,7 +457,7 @@ Le misure sono state effettuate in quattro configurazioni diverse: 4 dischi, 6 d
     \toprule
     & valore & $\sigma$ & unità \\
     \midrule
-    $k$ & 42.7 & 4.3 & \si{\newton\per\metre} \\
+    $k$ & 42.72 & 0.66 & \si{\newton\per\metre} \\
     \bottomrule
   \end{tabular}
   \caption{Risultato finale per la costante elastica della molla $k$ con la corrispondente incertezza.}
