--- a/LabMecc/PPI1-Molla/PPI1-Molla.tex
+++ b/LabMecc/PPI1-Molla/PPI1-Molla.tex
@@ -96,7 +96,7 @@
 \begin{itemize}
   \item Attenzione a non allungare eccessivamente la molla rispetto alle condizioni di equilibrio per la misura di periodo (circa \SIrange{1}{1.5}{\centi\metre}).
   \item Fare attenzione che la molla non urti la parte superiore quando è al minimo della lunghezza in quanto altera le misure di periodo.
-  \item Assicurasi che le oscillazioni della molla siano, per quanto possibile, verticali e unidimensionali.
+  \item Assicurarsi che le oscillazioni della molla siano, per quanto possibile, verticali e unidimensionali.
 \end{itemize}
 
 %-------------------------------
